--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <!-- Headers CSS -->
     <link href="./css/navbar-top-fixed.css" rel="stylesheet">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
 </head>
-<body class="bg-dark">
+<body class="bg-dark flex" style="height: auto;">
 
     <!-- Navigation (top) bar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
