--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="./css/navbar-top-fixed.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>Jerry's Karuta Wiki</title>
 </head>
 <body class="bg-dark flex" style="height: auto;">
 
