--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jerry's Karuta Wiki</title>
 </head>
-<body class="bg-dark flex" style="height: auto;">
+<body class="bg-dark flex" style="min-height: auto;">
 
     <!-- Navigation (top) bar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
