--- a/basics/voting.html
+++ b/basics/voting.html
@@ -26,12 +26,12 @@
     <main class="container-xl">
         <!-- Sidebar -->
         <div id="sidebar"></div>
-        <!-- Welcome section -->
+        <!-- Body section -->
         <div class="text-white">
-            <h1>Welcome</h1>
+            <h1>Voting</h1>
             <hr>
-            <p class="lead">Documentation for the Discord Karuta bot, with details on commands and their usages.</p>
-            <p class="lead">Select an item from the left sidebar, or enter a search term on the top right.</p>
+            <p class="lead">Lead paragraph</p>
+            <p>Non-lead paragraph</p>
         </div>
     </main>
     <script src="/js/bootstrap.bundle.min.js"></script>
