Fixed relevant directory specifications

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
     <!-- Sidebars CSS -->
-    <link href="/css/sidebars.css" rel="stylesheet">
+    <link href="./css/sidebars.css" rel="stylesheet">
     <!-- Headers CSS -->
-    <link href="/css/navbar-top-fixed.css" rel="stylesheet">
+    <link href="./css/navbar-top-fixed.css" rel="stylesheet">
     <!-- jQuery JS -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Allows loading DOM elements from alternate HTML files -->
     <script>
         $(function(){
-            $("#navbar").load("/templates/navbar.html");
-            $("#sidebar").load("/templates/sidebar.html");
+            $("#navbar").load("./templates/navbar.html");
+            $("#sidebar").load("./templates/sidebar.html");
         });
     </script>
     <meta charset="UTF-8">
@@ -34,7 +34,7 @@
             <p class="lead">Select an item from the left sidebar, or enter a search term on the top right.</p>
         </div>
     </main>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/sidebars.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/sidebars.js"></script>
 </body>
 </html>
